homeworks/dtimchuk/module-3/lesson-08/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  namespace: dtimchuk-dev
  labels:
    app: course-app
    env: development
spec:
  replicas: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: course-app
  template:
    metadata:
      labels:
        app: course-app
        env: development
    spec:
      containers:
      - name: course-app
        image: dmitrytimchuk/course-app:latest
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          periodSeconds: 5
          initialDelaySeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 5
          initialDelaySeconds: 10
          timeoutSeconds: 3
