homeworks/dtimchuk/module-3/lesson-08/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app
  namespace: dtimchuk-dev
  labels:
    app: course-app
    env: development
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: course-app
