homeworks/dtimchuk/module-3/lesson-08/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app
  namespace: dtimchuk-dev
spec:
  ingressClassName: traefik
  rules:
    - host: course-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app
                port:
                  number: 80
